# ydb-sqlglot-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  conversion_bug.yml  feature_request.yml
.github/scripts/: increment_version.py
.github/workflows/: lint.yml  python-publish.yml  tests.yml
tests/: conftest.py  test_clickbench.py  test_clickbench_integration.py  test_integration.py  test_tpch.py  test_tpch_integration.py  test_ydb.py
tests/benchmarks/: test_clickbench.py  test_clickbench_integration.py  test_tpch.py  test_tpch_integration.py
tests/fixtures/clickbench/: clickbench_ch_oracle.txt  create.sql  create_clickhouse.sql  docker-compose.yml  insert.sql  insert_clickhouse.sql  oracle_compare.py  run_clickhouse_oracle.sh
tests/fixtures/tpch/: create.sql  create_postgres.sql  insert.sql  insert_postgres.sql  oracle_compare.py  queries.sql  queries_postgres.sql
tests/unit/: test_ydb.py
ydb_sqlglot/: __init__.py  ydb.py
